community-docs/v2.11/modules/ROOT/pages/getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher.adoc
= Upgrading Rancher Installed with Docker
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2026-02-11
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/upgrade-docker-installed-rancher
:product-path:

[WARNING]
====
**Docker installs are not supported in production environments.** These instructions are provided for testing and development purposes only. Please don't use this method to install Rancher in production environments.
====

The following instructions will guide you through upgrading a Rancher server that was installed with Docker.

== Prerequisites

* **Review the xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades.adoc#_known_upgrade_issues[known upgrade issues]** section in the Rancher documentation for the most noteworthy issues to consider when upgrading Rancher. A more complete list of known issues for each Rancher version can be found in the release notes on https://github.com/rancher/rancher/releases[GitHub] and on the https://forums.rancher.com/c/announcements/12[Rancher forums]. Note that upgrades to or from any chart in the xref:getting-started/installation-and-upgrade/resources/choose-a-rancher-version.adoc#_helm_chart_repositories[rancher-alpha repository] aren't supported.
* **For xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/air-gapped-helm-cli-install.adoc[air gap installs only,] collect and populate images for the new Rancher server version**. Follow the guide to xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images.adoc[populate your private registry] with the images for the Rancher version that you want to upgrade to.

== Placeholder Review

During upgrade, you'll enter a series of commands, filling placeholders with data from your environment. These placeholders are denoted with angled brackets and all capital letters (`<EXAMPLE>`).

Here's an **example** of a command with a placeholder:

[,shell]
----
docker stop <RANCHER_CONTAINER_NAME>
----

In this command, `<RANCHER_CONTAINER_NAME>` is the name of your Rancher container.

== Get Data for Upgrade Commands

To obtain the data to replace the placeholders, run:

[,shell]
----
docker ps
----

Write down or copy this information before starting the upgrade.

image::placeholder-ref.png[Placeholder Reference]

|===
| Placeholder | Example | Description 

| `<RANCHER_CONTAINER_TAG>`
| `v2.1.3`
| The rancher/rancher image you pulled for initial install.

| `<RANCHER_CONTAINER_NAME>`
| `festive_mestorf`
| The name of your Rancher container.

| `<RANCHER_VERSION>`
| `v2.1.3`
| The version of Rancher that you're creating a backup for.

| `<DATE>`
| `2018-12-19`
| The date that the data container or backup was created.

|===

You can obtain `<RANCHER_CONTAINER_TAG>` and `<RANCHER_CONTAINER_NAME>` by logging into your Rancher server by remote connection and entering the command to view the containers that are running: `docker ps`. You can also view containers that are stopped using a different command: `docker ps -a`. Use these commands for help anytime during while creating backups.

== Upgrade

[WARNING]
====
Rancher upgrades to version 2.12.0 and later will be blocked if any RKE1-related resources are detected, as the Rancher Kubernetes Engine (RKE/RKE1) is end of life as of *July 31, 2025*. For detailed cleanup and recovery steps, refer to the <<_rke1_resource_validation_and_upgrade_requirements_in_rancher_v2_12,RKE1 Resource Validation and Upgrade Requirements in Rancher v2.12>>.
====


During upgrade, you create a copy of the data from your current Rancher container and a backup in case something goes wrong. Then you deploy the new version of Rancher in a new container using your existing data.

=== 1. Create a copy of the data from your Rancher server container

. Using a remote Terminal connection, log into the node running your Rancher server.
. Stop the container currently running Rancher server. Replace `<RANCHER_CONTAINER_NAME>` with the name of your Rancher container.
+
[,shell]
----
 docker stop <RANCHER_CONTAINER_NAME>
----

. Use the command below, replacing each placeholder, to create a data container from the Rancher container that you just stopped.
+
[,shell]
----
 docker create --volumes-from <RANCHER_CONTAINER_NAME> --name rancher-data rancher/rancher:<RANCHER_CONTAINER_TAG>
----

=== 2. Create a backup tarball

. From the data container that you just created (`rancher-data`), create a backup tarball (`rancher-data-backup-<RANCHER_VERSION>-<DATE>.tar.gz`).
+
This tarball will serve as a rollback point if something goes wrong during upgrade. Use the following command, replacing each placeholder.
+
[,shell]
----
 docker run --volumes-from rancher-data -v "$PWD:/backup" --rm busybox tar zcvf /backup/rancher-data-backup-<RANCHER_VERSION>-<DATE>.tar.gz /var/lib/rancher
----
+
**Step Result:** When you enter this command, a series of commands should run.

. Enter the `ls` command to confirm that the backup tarball was created. It will have a name similar to `rancher-data-backup-<RANCHER_VERSION>-<DATE>.tar.gz`.
+
[,shell]
----
[rancher@ip-10-0-0-50 ~]$ ls
rancher-data-backup-v2.1.3-20181219.tar.gz
----

. Move your backup tarball to a safe location external from your Rancher server.

=== 3. Pull the New Docker Image

Pull the image of the Rancher version that you want to upgrade to.

|===
| Placeholder | Description

| `<RANCHER_VERSION_TAG>`
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.
|===

[source,shell]
----
docker pull rancher/rancher:<RANCHER_VERSION_TAG>
----

=== 4. Start the New Rancher Server Container

Start a new Rancher server container using the data from the `rancher-data` container. Remember to pass in all the environment variables that you had used when you started the original container.

[WARNING]
====
**_Do not_** stop the upgrade after initiating it, even if the upgrade process seems longer than expected. Stopping the upgrade may result in database migration errors during future upgrades.
====


If you used a proxy, see xref:reference-guides/single-node-rancher-in-docker/http-proxy-configuration.adoc[HTTP Proxy Configuration.]

If you configured a custom CA root certificate to access your services, see xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_custom_ca_certificate[Custom CA root certificate.]

If you are recording all transactions with the Rancher API, see xref:reference-guides/single-node-rancher-in-docker/advanced-options.adoc#_api_audit_log[API Auditing]

To see the command to use when starting the new Rancher server container, choose from the following options:

* Docker Upgrade
* Docker Upgrade for Air Gap Installs

[tabs]
====
Docker Upgrade::
+
--
Select the option which applies to your installed Rancher server:

[#_option_a_default_self_signed_certificate]
[pass]
<h3><a class="anchor" id="_option_a_default_self_signed_certificate" href="#_option_a_default_self_signed_certificate"></a>Option A: Default Self-Signed Certificate</h3>

.Click to expand
[%collapsible]
=====
If you have selected to use the Rancher generated self-signed certificate, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container. 

|===
| Placeholder | Description

| <RANCHER_VERSION_TAG>
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.

|===

[source,shell]
----
docker run -d --volumes-from rancher-data \
  --restart=unless-stopped \
  -p 80:80 -p 443:443 \
  --privileged \
  rancher/rancher:<RANCHER_VERSION_TAG>
----

Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
=====

[#_option_b_bring_your_own_certificate_self_signed]
[pass]
<h3><a class="anchor" id="_option_b_bring_your_own_certificate_self_signed" href="#_option_b_bring_your_own_certificate_self_signed"></a>Option B: Bring Your Own Certificate: Self-Signed</h3>

.Click to expand
[%collapsible]
=====
If you have selected to bring your own self-signed certificate, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to have access to the same certificate that you had originally installed with. 

[NOTE]
======
Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates.
======

|===
| Placeholder | Description

| `<CERT_DIRECTORY>`
| The path to the directory containing your certificate files.

| `<FULL_CHAIN.pem>`
| The path to your full certificate chain.

| `<PRIVATE_KEY.pem>`
| The path to the private key for your certificate.

| `<CA_CERTS.pem>`
| The path to the certificate authority's certificate.

| `<RANCHER_VERSION_TAG>`
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.

|===

[source,shell]
----
docker run -d --volumes-from rancher-data \
  --restart=unless-stopped \
  -p 80:80 -p 443:443 \
  -v /<CERT_DIRECTORY>/<FULL_CHAIN.pem>:/etc/rancher/ssl/cert.pem \
  -v /<CERT_DIRECTORY>/<PRIVATE_KEY.pem>:/etc/rancher/ssl/key.pem \
  -v /<CERT_DIRECTORY>/<CA_CERTS.pem>:/etc/rancher/ssl/cacerts.pem \
  --privileged \
  rancher/rancher:<RANCHER_VERSION_TAG>
----

Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
=====

[#_option_c_bring_your_own_certificate_signed_by_recognized_ca]
[pass]
<h3><a class="anchor" id="_option_c_bring_your_own_certificate_signed_by_recognized_ca" href="#_option_c_bring_your_own_certificate_signed_by_recognized_ca"></a>Option C: Bring Your Own Certificate: Signed by Recognized CA</h3>

.Click to expand
[%collapsible]
=====
If you have selected to use a certificate signed by a recognized CA, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to have access to the same certificates that you had originally installed with. Remember to include `--no-cacerts` as an argument to the container to disable the default CA certificate generated by Rancher. 

[NOTE]
======
Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
======

|===
| Placeholder | Description

| `<CERT_DIRECTORY>`
| The path to the directory containing your certificate files.

| `<FULL_CHAIN.pem>`
| The path to your full certificate chain.

| `<PRIVATE_KEY.pem>`
| The path to the private key for your certificate.

| `<RANCHER_VERSION_TAG>`
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.

|===

[source,shell]
----
docker run -d --volumes-from rancher-data \
  --restart=unless-stopped \
  -p 80:80 -p 443:443 \
  -v /<CERT_DIRECTORY>/<FULL_CHAIN.pem>:/etc/rancher/ssl/cert.pem \
  -v /<CERT_DIRECTORY>/<PRIVATE_KEY.pem>:/etc/rancher/ssl/key.pem \
  --privileged \
  rancher/rancher:<RANCHER_VERSION_TAG> \
  --no-cacerts
----

Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
=====

[#_option_d_lets_encrypt_certificate]
[pass]
<h3><a class="anchor" id="_option_d_lets_encrypt_certificate" href="#_option_d_lets_encrypt_certificate"></a>Option D: Let's Encrypt Certificate</h3>

.Click to expand
[%collapsible]
=====
[CAUTION]
======
Let's Encrypt provides rate limits for requesting new certificates. Therefore, limit how often you create or destroy the container. For more information, see https://letsencrypt.org/docs/rate-limits/[Let's Encrypt documentation on rate limits].
======

If you have selected to use https://letsencrypt.org/[Let's Encrypt] certificates, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to provide the domain that you had used when you originally installed Rancher. 

[NOTE]
======
Reminder of the Cert Prerequisites:

* Create a record in your DNS that binds your Linux host IP address to the hostname that you want to use for Rancher access (`rancher.mydomain.com` for example).
* Open port `TCP/80` on your Linux host. The Let's Encrypt http-01 challenge can come from any source IP address, so port `TCP/80` must be open to all IP addresses. 
======

|===
| Placeholder | Description

| `<RANCHER_VERSION_TAG>`
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.

| `<YOUR.DNS.NAME>`
| The domain address that you had originally started with

|===

[source,shell]
----
docker run -d --volumes-from rancher-data \
  --restart=unless-stopped \
  -p 80:80 -p 443:443 \
  --privileged \
  rancher/rancher:<RANCHER_VERSION_TAG> \
  --acme-domain <YOUR.DNS.NAME>
----

Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
=====

--

Docker Air Gap Upgrade::
+
--

For security purposes, SSL (Secure Sockets Layer) is required when using Rancher. SSL secures all Rancher network communication, like when you login or interact with a cluster. 

When starting the new Rancher server container, choose from the following options: 

[#_option_a_default_self_signed_certificate_2]
[pass]
<h3><a class="anchor" id="_option_a_default_self_signed_certificate_2" href="#_option_a_default_self_signed_certificate_2"></a>Option A: Default Self-Signed Certificate </h3>

.Click to expand
[%collapsible]
=====
If you have selected to use the Rancher generated self-signed certificate, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container.

|===
| Placeholder | Description

| `<REGISTRY.YOURDOMAIN.COM:PORT>`
| Your private registry URL and port.

| `<RANCHER_VERSION_TAG>`
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.

|===

[source,shell]
----
docker run -d --volumes-from rancher-data \
    --restart=unless-stopped \
    -p 80:80 -p 443:443 \
    -e CATTLE_SYSTEM_DEFAULT_REGISTRY=<REGISTRY.YOURDOMAIN.COM:PORT> \ # Set a default private registry to be used in Rancher
    -e CATTLE_SYSTEM_CATALOG=bundled \ # Use the packaged Rancher system charts
    --privileged \
    <REGISTRY.YOURDOMAIN.COM:PORT>/rancher/rancher:<RANCHER_VERSION_TAG>
----

Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
=====

[#_option_b_bring_your_own_certificate_self_signed_2]
[pass]
<h3><a class="anchor" id="_option_b_bring_your_own_certificate_self_signed_2" href="#_option_b_bring_your_own_certificate_self_signed_2"></a>Option B: Bring Your Own Certificate: Self-Signed</h3>

.Click to expand
[%collapsible]
=====
If you have selected to bring your own self-signed certificate, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to have access to the same certificate that you had originally installed with.

[NOTE]
======
Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates in the chain. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
======

|===
| Placeholder | Description

| `<CERT_DIRECTORY>`
| The path to the directory containing your certificate files.

| `<FULL_CHAIN.pem>`
| The path to your full certificate chain.

| `<PRIVATE_KEY.pem>`
| The path to the private key for your certificate.

| `<CA_CERTS.pem>`
| The path to the certificate authority's certificate.

| `<REGISTRY.YOURDOMAIN.COM:PORT>`
| Your private registry URL and port.

| `<RANCHER_VERSION_TAG>`
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.

|===

[source,shell]
----
docker run -d --restart=unless-stopped \
    -p 80:80 -p 443:443 \
    -v /<CERT_DIRECTORY>/<FULL_CHAIN.pem>:/etc/rancher/ssl/cert.pem \
    -v /<CERT_DIRECTORY>/<PRIVATE_KEY.pem>:/etc/rancher/ssl/key.pem \
    -v /<CERT_DIRECTORY>/<CA_CERTS.pem>:/etc/rancher/ssl/cacerts.pem \
    -e CATTLE_SYSTEM_DEFAULT_REGISTRY=<REGISTRY.YOURDOMAIN.COM:PORT> \ # Set a default private registry to be used in Rancher
    -e CATTLE_SYSTEM_CATALOG=bundled \ # Use the packaged Rancher system charts
    --privileged \
    <REGISTRY.YOURDOMAIN.COM:PORT>/rancher/rancher:<RANCHER_VERSION_TAG>
----

Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
=====

[#_option_c_bring_your_own_certificate_signed_by_recognized_ca_2]
[pass]
<h3><a class="anchor" id="_option_c_bring_your_own_certificate_signed_by_recognized_ca_2" href="#_option_c_bring_your_own_certificate_signed_by_recognized_ca_2"></a>Option C: Bring Your Own Certificate: Signed by Recognized CA</h3>

.Click to expand
[%collapsible]
=====
If you have selected to use a certificate signed by a recognized CA, you add the `--volumes-from rancher-data` to the command that you had started your original Rancher server container and need to have access to the same certificates that you had originally installed with.

[NOTE]
======
Reminder of the Cert Prerequisite: The certificate files must be in PEM format. In your certificate file, include all intermediate certificates provided by the recognized CA. Order your certificates with your certificate first, followed by the intermediates. For an example, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/certificate-troubleshooting.adoc[Certificate Troubleshooting.]
======

|===
| Placeholder | Description

| `<CERT_DIRECTORY>`
| The path to the directory containing your certificate files.

| `<FULL_CHAIN.pem>`
| The path to your full certificate chain.

| `<PRIVATE_KEY.pem>`
| The path to the private key for your certificate.

| `<REGISTRY.YOURDOMAIN.COM:PORT>`
| Your private registry URL and port.

| `<RANCHER_VERSION_TAG>`
| The release tag of the xref:getting-started/installation-and-upgrade/installation-references/helm-chart-options.adoc[Rancher version] that you want to upgrade to.

|===

[NOTE]
======
Use the `--no-cacerts` as argument to the container to disable the default CA certificate generated by Rancher.
======

[source,shell]
----
docker run -d --volumes-from rancher-data \
    --restart=unless-stopped \
     -p 80:80 -p 443:443 \
     --no-cacerts \
     -v /<CERT_DIRECTORY>/<FULL_CHAIN.pem>:/etc/rancher/ssl/cert.pem \
     -v /<CERT_DIRECTORY>/<PRIVATE_KEY.pem>:/etc/rancher/ssl/key.pem \
     -e CATTLE_SYSTEM_DEFAULT_REGISTRY=<REGISTRY.YOURDOMAIN.COM:PORT> \ # Set a default private registry to be used in Rancher
     -e CATTLE_SYSTEM_CATALOG=bundled \ # Use the packaged Rancher system charts
     --privileged
     <REGISTRY.YOURDOMAIN.COM:PORT>/rancher/rancher:<RANCHER_VERSION_TAG>
----

Privileged access is xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/index.adoc#_privileged_access_for_rancher[required.]
=====

--
====

**Result:** You have upgraded Rancher. Data from your upgraded server is now saved to the `rancher-data` container for use in future upgrades. 

=== 5. Verify the Upgrade

Log into Rancher. Confirm that the upgrade succeeded by checking the version displayed in the bottom-left corner of the browser window.

[NOTE]
====
Having network issues in your user clusters following upgrade? See https://github.com/rancher/rancher-docs/tree/main/archived_docs/en/version-2.0-2.4/getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades/namespace-migration.md[Restoring Cluster Networking].
====

=== 6. Clean up Your Old Rancher Server Container

Remove the previous Rancher server container. If you only stop the previous Rancher server container (and don't remove it), the container may restart after the next server reboot. 

== RKE1 Resource Validation and Upgrade Requirements in Rancher v2.12

Rancher v2.12.0 and later has removed support for the Rancher Kubernetes Engine (RKE/RKE1). During upgrade, Rancher validates the cluster resources and blocks the upgrade if any RKE1-related resources are detected.

This validation affects the following resource types:

* Clusters with `rkeConfig` (`clusters.management.cattle.io`)
* NodeTemplates (`nodetemplates.management.cattle.io`)
* ClusterTemplates (`clustertemplates.management.cattle.io`)

This is particularly relevant for single-node Docker installations, where Rancher is not running during the upgrade. In such cases, controllers are not available to automatically clean up deprecated resources, and the upgrade process will fail early with an error listing the blocking resources. 

=== 1. Pre-Upgrade (Recommended)

Before upgrading, while Rancher is still running:

* Run the `pre-upgrade-hook` cleanup script to delete all RKE1 clusters and templates. You can find the script in the Rancher GitHub repository: https://github.com/rancher/rancher/blob/v2.12.0/chart/scripts/pre-upgrade-hook.sh[pre-upgrade-hook.sh].
* This allows Rancher to clean up associated resources and finalizers. 

=== 2. Post-Upgrade Failure Due to Residual RKE1 Resources

If the upgrade to Rancher v2.12.0 or later is attempted without prior cleanup of RKE1 resources:
* The upgrade will fail and display an error listing the resource names that are preventing the upgrade.
* This occurs because Rancher includes validation to detect and block upgrades when unsupported RKE1 resources are still present.
* To proceed, <<_rolling_back,rollback>> to the previous Rancher version, delete the identified resources, and then retry after <<_manual_cleanup_after_rollback,manual cleanup>>.

[NOTE]
====
Helm-based Rancher Helm-based Rancher installations are not affected by this issue, as Rancher remains available during the upgrade and can perform resource cleanup as needed.
====

=== Manual Cleanup After Rollback

Users should perform the following steps after rolling back to a previous Rancher version:

* **Manually delete** the resources listed in the upgrade error message (e.g., RKE1 clusters, NodeTemplates, ClusterTemplates).
* If deletion is blocked due to **finalizers**, edit the resources and remove the `metadata.finalizers` field.
* If a **validating webhook** prevents deletion (e.g., for the `system-project`), please refer to the xref:reference-guides/rancher-webhook.adoc#_bypassing_the_webhook[Bypassing the Webhook] documentation.

== Rolling Back

If your upgrade does not complete successfully, you can roll back Rancher server and its data back to its last healthy state. For more information, see xref:getting-started/installation-and-upgrade/other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc[Docker Rollback].
